todolist: text is non-selective; overall: fixed scrollbar overflowing and layout white space in mobile view

--- a/src/features/todolist/components/CategoryBoardItem/categoryBoardItem.module.css
+++ b/src/features/todolist/components/CategoryBoardItem/categoryBoardItem.module.css
@@ -1,5 +1,6 @@
 .categoryBoardItem {
   min-width: 250px;
+  user-select: none;
 }
 
 .categoryHeader {
